--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"/>
     <title>Speech text reader</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
     <button id="id" class="btn btn-toggle">
         Toggle Text Box
     </button>
-    <div id="text-box" class="text-box">
+    <div id="text-box" class="text-box" >
 
         <div id="close" class="close">X</div>
         <h3>Choose Voice</h3>
