adding some javascript functionalities

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <title>Speech text reader</title>
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container">
     <h1>Speech Text Reader</h1>
-    <button id="id" class="btn btn-toggle">
+    <button id="toggle" class="btn btn-toggle">
         Toggle Text Box
     </button>
+    
     <div id="text-box" class="text-box" >
 
         <div id="close" class="close">X</div>
@@ -23,10 +24,11 @@
         <textarea id="text" placeholder="Enter text to read"></textarea>
         <button class="btn" id="read">REad Text</button>
 
-
     </div>
 
     <main></main>
+
+</div>
     <script src="script.js"></script>
 </body>
 </html>
